src/test/deca/context/valid/homeMade/tests/test331_print1.deca
// test valide de la règle 3.31


{
    println(7);
    println(7.89);
    print("toto");
}