src/test/deca/context/invalid/homeMade/tests/test01_affectation1.deca
// test invalide de la règle 0.1

{
    print(a);
}